--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.3"
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
