Complete liting,prettier & pre-commit hook setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "cd backend && husky",
+    "prepare": "husky"
   },
   "lint-staged" : {
     "src/**/*.ts": [
