--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,17 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "db:push:test": "dotenv -e .env.test -- npx prisma db push",
     "test": "dotenv -e .env.test -- vitest run",
-    "test:watch": "dotenv -e .env.test -- vitest"
+    "test:watch": "dotenv -e .env.test -- vitest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "prepare": "husky"
+  },
+  "lint-staged" : {
+    "src/**/*.ts": [
+    "eslint --fix",
+    "prettier --write"
+    ]    
   },
   "keywords": [],
   "author": "",
@@ -38,10 +48,18 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "dotenv-cli": "^11.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
     "prisma": "^6.19.1",
     "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.51.0",
     "vitest": "^4.0.16"
   }
 }
